--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "getrobotpwd": "cd node_modules/dorita980 && npm install && node ./bin/getpassword.js"
   },
   "dependencies": {
-    "dorita980": "^3.0.11"
+    "dorita980": "^3.0.11",
+    "node-cache": "^4.1.1"
   }
 }
