--- a/sample-config.json
+++ b/sample-config.json
@@ -15,7 +15,8 @@
       "blid": "1234567890",
       "robotpwd": "aPassword",
       "ipaddress": "10.0.0.30",
-      "autoRefreshEnabled": true
+      "autoRefreshEnabled": true,
+      "pollingInterval": 30
     }
   ]
 }
