--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "dorita980": "^3.0.12",
-    "node-cache": "^4.2.0"
+    "node-cache": "^4.2.0",
+    "promise-timeout": "^1.3.0"
   }
 }
